CSS Zen Garden - Gap Fixed

--- a/css_zen_garden/styles.css
+++ b/css_zen_garden/styles.css
@@ -7,19 +7,18 @@
 :root {
     --text-libre: 'Libre Baskerville', sans-serif;
     --text-julius: 'Julius Sans One', sans-serif;
-
 }
 * {
     box-sizing: border-box;
 }
 body {
     display: grid;
-    grid-template-columns: repeat(1fr, 3);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(auto-fit, min-max(180px, 1fr));
     grid-template-areas: 
-        "head head head head"
-        "main main main side"
-        "foot foot foot foot";
+        "head head head"
+        "main main side"
+        "foot foot foot";
     margin: 0;
     padding: 0;
     color: #325050;
@@ -78,11 +77,20 @@ nav {
     background-image: url(resources/contours.png), url(resources/noise.png), url(resources/gridlines.png), url(resources/huntington.jpg);
     font-family: var(--text-julius);
 }
+nav > ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+nav > ul > li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 main {
     grid-area: main;
     grid-column: 1 / 3;
     grid-row: 2 / 3;
-    width: 867.5px;
     margin: 0;
     padding: 0;
     font-family: var(--text-libre);
@@ -114,13 +122,34 @@ aside {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
     font-family: var(--text-libre);
-    width: 446.5px;
 }
-i {
+.icon {
     padding: 8px;
     border: 3px solid;
     border-radius: 50%;
     color: #607476;
+}
+.arrow {
+    height: 24px;
+    width: 24px;
+    border: solid rgba(255, 255, 255, 0.7);
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 3px;
+}
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+.viewdesigns {
+    display: block;
+    height: 58px;
+    width: 278.5px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color:rgb(192, 202, 195);
+    font-size: 18px;
+    font-style: normal;
+    text-align: center;
 }
 .explanation {
     display: block;
